Bitbeam.cc modifications
